src/tests/functionality/assignment_4_control_flow/invalid_syntax/02_for_missing_semicolon.c
int main() {
    int i = 0;
    int sum = 0;

    for (i = 0 i < 5; i = i + 1) {
        sum = sum + i;
    }

    return sum;
}